[package]
name = "entangled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
bevy = "0.12"
bevy_xpbd_2d = "0.3"
bevy-yoleck = "0.16"
egui = "0.23"
serde = "1.0"
strum = { version = "0.25", features = ["derive"] }
console_error_panic_hook = "0.1.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
